<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.mymoneytracker.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_nav_home_to_historyFragment"
            app:destination="@id/historyFragment" />
        <action
            android:id="@+id/action_nav_home_to_summaryFragment"
            app:destination="@id/summaryFragment" />
    </fragment>

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.mymoneytracker.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.mymoneytracker.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />
    <fragment
        android:id="@+id/summaryFragment"
        android:name="com.example.mymoneytracker.ui.summary.SummaryFragment"
        android:label="fragment_summary"
        tools:layout="@layout/fragment_summary" >
        <action
            android:id="@+id/action_summaryFragment_to_nav_home"
            app:destination="@id/nav_home" />
    </fragment>
    <fragment
        android:id="@+id/historyFragment"
        android:name="com.example.mymoneytracker.ui.history.HistoryFragment"
        android:label="fragment_history"
        tools:layout="@layout/fragment_history" >
        <action
            android:id="@+id/action_historyFragment_to_nav_home"
            app:destination="@id/nav_home" />
        <action
            android:id="@+id/action_historyFragment_to_addDataFragment"
            app:destination="@id/addDataFragment" />
    </fragment>
    <fragment
        android:id="@+id/addDataFragment"
        android:name="com.example.mymoneytracker.ui.addData.AddDataFragment"
        android:label="fragment_add_data"
        tools:layout="@layout/fragment_add_data" >
        <action
            android:id="@+id/action_addDataFragment_to_historyFragment"
            app:destination="@id/historyFragment" />
    </fragment>
</navigation>